Fix spacing for nav icon

--- a/components/navigation-platform.scss
+++ b/components/navigation-platform.scss
@@ -97,7 +97,7 @@
       svg,
       img {
         transform: translateY(-1px);
-        margin-right: 4px;
+        margin-right: 8px;
       }
       color: $secondary;
       &:hover,
